Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(Text var)
    end
end
